--- a/replay.config
+++ b/replay.config
@@ -1,8 +1,8 @@
 # Location of the simulation log files
-Data_Files=/Users/mustafakeskin/Documents/Personel/Perso/Eurocontrol Replay/data/
-Map_File=/Users/mustafakeskin/Documents/Personel/Perso/Eurocontrol Replay/images/eu.tiff
-eons_file=/Users/mustafakeskin/Documents/Personel/Perso/Eurocontrol Replay/data/eons.data05.gz
-ipas_directory=/Users/mustafakeskin/Documents/Personel/Perso/Eurocontrol Replay/data/SPIDY2
+Data_Files=/Users/mustafakeskin/Documents/workspace/Replay/data/
+Map_File=/Users/mustafakeskin/Documents/workspace/Replay/images/eu.tiff
+eons_file=/Users/mustafakeskin/Documents/workspace/Replay/data/eons.data05.gz
+ipas_directory=/Users/mustafakeskin/Documents/workspace/Replay/data/SPIDY2
 
 #
 activation_mode=REPLAY_OFFLINE
